[gd_scene load_steps=74 format=2]

[ext_resource path="res://titleScreen/logo.png" type="Texture" id=1]
[ext_resource path="res://menus/startGame.tscn" type="PackedScene" id=2]
[ext_resource path="res://sprites/running/Running5.png" type="Texture" id=3]
[ext_resource path="res://menus/TitleScreen.gd" type="Script" id=4]
[ext_resource path="res://weapon png.png" type="Texture" id=5]
[ext_resource path="res://sprites/enemyHoldingGun/enemy1.png" type="Texture" id=6]
[ext_resource path="res://platform_3.png" type="Texture" id=7]
[ext_resource path="res://muzzle flash.png" type="Texture" id=8]
[ext_resource path="res://RedBullet.png" type="Texture" id=9]
[ext_resource path="res://squirrel.png" type="Texture" id=10]
[ext_resource path="res://Fonts/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://sprites/enemyHoldingGun/enemy5.png" type="Texture" id=12]
[ext_resource path="res://sprites/enemies/enemyWalk/walk4.png" type="Texture" id=13]
[ext_resource path="res://sprites/enemies/enemyWalk/walk3.png" type="Texture" id=14]
[ext_resource path="res://sprites/enemies/enemyWalk/walk5.png" type="Texture" id=15]
[ext_resource path="res://sprites/enemies/enemyWalk/walk1.png" type="Texture" id=16]
[ext_resource path="res://sprites/enemies/enemyWalk/walk6.png" type="Texture" id=17]
[ext_resource path="res://sprites/enemyHoldingGun/enemy6.png" type="Texture" id=18]
[ext_resource path="res://sprites/enemies/enemyWalk/walk7.png" type="Texture" id=19]
[ext_resource path="res://sprites/enemyHoldingGun/enemy4.png" type="Texture" id=20]
[ext_resource path="res://sprites/enemyHoldingGun/enemy3.png" type="Texture" id=21]
[ext_resource path="res://sprites/enemyShooting/cop_standing2.png" type="Texture" id=22]
[ext_resource path="res://sprites/enemyHoldingGun/enemy7.png" type="Texture" id=23]
[ext_resource path="res://sprites/enemies/enemyWalk/walk2.png" type="Texture" id=24]
[ext_resource path="res://sprites/enemyHoldingGun/enemy2.png" type="Texture" id=25]
[ext_resource path="res://sprites/standing/turning3.png" type="Texture" id=26]
[ext_resource path="res://sprites/knockout/knockout4.png" type="Texture" id=27]
[ext_resource path="res://sprites/standing/standing5.png" type="Texture" id=28]
[ext_resource path="res://sprites/running/Running3.png" type="Texture" id=29]
[ext_resource path="res://sprites/slide/slide1.png" type="Texture" id=30]
[ext_resource path="res://sprites/running/Running4.png" type="Texture" id=31]
[ext_resource path="res://sprites/jumping/jump4-4.png" type="Texture" id=32]
[ext_resource path="res://sprites/standing/turning5.png" type="Texture" id=33]
[ext_resource path="res://sprites/standing/turning2.png" type="Texture" id=34]
[ext_resource path="res://sprites/jumping/jump6.png" type="Texture" id=35]
[ext_resource path="res://sprites/jumping/jump1.png" type="Texture" id=36]
[ext_resource path="res://sprites/jumping/jump4-1.png" type="Texture" id=37]
[ext_resource path="res://sprites/dash/dash3.png" type="Texture" id=38]
[ext_resource path="res://sprites/knockout/knockout1.png" type="Texture" id=39]
[ext_resource path="res://sprites/knockout/knockout9.png" type="Texture" id=40]
[ext_resource path="res://sprites/standing/standing3.png" type="Texture" id=41]
[ext_resource path="res://sprites/jumping/jump4-3.png" type="Texture" id=42]
[ext_resource path="res://sprites/knockout/knockout6.png" type="Texture" id=43]
[ext_resource path="res://sprites/running/Running6.png" type="Texture" id=44]
[ext_resource path="res://sprites/jumping/jump4-2.png" type="Texture" id=45]
[ext_resource path="res://sprites/knockout/knockout7.png" type="Texture" id=46]
[ext_resource path="res://sprites/standing/turning1.png" type="Texture" id=47]
[ext_resource path="res://sprites/jumping/jump2.png" type="Texture" id=48]
[ext_resource path="res://sprites/slide/slide4.png" type="Texture" id=49]
[ext_resource path="res://sprites/slide/slide2.png" type="Texture" id=50]
[ext_resource path="res://sprites/running/Running2.png" type="Texture" id=51]
[ext_resource path="res://sprites/slide/slide5.png" type="Texture" id=52]
[ext_resource path="res://sprites/standing/turning4.png" type="Texture" id=53]
[ext_resource path="res://sprites/jumping/jump3.png" type="Texture" id=54]
[ext_resource path="res://sprites/standing/standing.png" type="Texture" id=55]
[ext_resource path="res://sprites/running/Running1.png" type="Texture" id=56]
[ext_resource path="res://sprites/knockout/knockout2.png" type="Texture" id=57]
[ext_resource path="res://sprites/jumping/jump5.png" type="Texture" id=58]
[ext_resource path="res://sprites/standing/standing4.png" type="Texture" id=59]
[ext_resource path="res://sprites/dash/dash1.png" type="Texture" id=60]
[ext_resource path="res://sprites/standing/standing2.png" type="Texture" id=61]
[ext_resource path="res://sprites/knockout/knockout10.png" type="Texture" id=62]
[ext_resource path="res://sprites/knockout/knockout3.png" type="Texture" id=63]
[ext_resource path="res://sprites/knockout/knockout8.png" type="Texture" id=64]
[ext_resource path="res://sprites/dash/dash2.png" type="Texture" id=65]
[ext_resource path="res://sprites/slide/slide3.png" type="Texture" id=66]
[ext_resource path="res://sprites/knockout/knockout5.png" type="Texture" id=67]
[ext_resource path="res://soundEffects/music/Hostiles-Inbound-Epic-Battle-Music-Powerful-Orchestral.mp3" type="AudioStream" id=68]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 11 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 12 ), ExtResource( 18 ), ExtResource( 23 ) ],
"loop": true,
"name": "EnemyHoldingGun",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "shooting",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 24 ), ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 19 ) ],
"loop": true,
"name": "enemyWalk",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 57 ), ExtResource( 63 ), ExtResource( 27 ), ExtResource( 67 ), ExtResource( 43 ), ExtResource( 46 ), ExtResource( 46 ), ExtResource( 64 ), ExtResource( 64 ), ExtResource( 40 ), ExtResource( 62 ) ],
"loop": false,
"name": "knockout",
"speed": 2.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 50 ), ExtResource( 66 ), ExtResource( 49 ), ExtResource( 52 ) ],
"loop": true,
"name": "Sliding",
"speed": 5.0
}, {
"frames": [ ExtResource( 58 ), ExtResource( 35 ), ExtResource( 55 ) ],
"loop": false,
"name": "Jump(end)",
"speed": 4.0
}, {
"frames": [ ExtResource( 60 ), ExtResource( 65 ), ExtResource( 38 ) ],
"loop": true,
"name": "Dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 48 ), ExtResource( 54 ) ],
"loop": false,
"name": "Jump(start)",
"speed": 4.0
}, {
"frames": [ ExtResource( 37 ), ExtResource( 45 ), ExtResource( 42 ), ExtResource( 32 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 51 ), ExtResource( 29 ), ExtResource( 31 ), ExtResource( 3 ), ExtResource( 44 ) ],
"loop": true,
"name": "Running",
"speed": 5.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 61 ), ExtResource( 41 ), ExtResource( 59 ), ExtResource( 28 ), ExtResource( 59 ), ExtResource( 28 ), ExtResource( 59 ), ExtResource( 41 ), ExtResource( 61 ), ExtResource( 55 ), ExtResource( 61 ), ExtResource( 59 ), ExtResource( 28 ), ExtResource( 41 ), ExtResource( 59 ), ExtResource( 28 ), ExtResource( 59 ), ExtResource( 41 ), ExtResource( 61 ), ExtResource( 47 ), ExtResource( 34 ), ExtResource( 53 ), ExtResource( 26 ), ExtResource( 53 ), ExtResource( 33 ), ExtResource( 33 ), ExtResource( 53 ), ExtResource( 26 ), ExtResource( 34 ), ExtResource( 47 ) ],
"loop": true,
"name": "Standing",
"speed": 1.25
} ]

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 11 )

[node name="TitleScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -800.0
margin_top = -450.0
margin_right = 800.0
margin_bottom = 450.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -350.0
margin_top = 50.0
margin_right = 350.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="HBoxContainer"]
margin_right = 700.0
margin_bottom = 300.0
texture = ExtResource( 1 )
stretch_mode = 4

[node name="startGame" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.5
margin_top = 11.0
margin_right = 215.5
margin_bottom = 107.0

[node name="Paltform 3" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 793.0
margin_right = 196.0
margin_bottom = 856.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platform 3 1" type="TextureRect" parent="."]
margin_left = 1208.0
margin_top = 795.0
margin_right = 1400.0
margin_bottom = 858.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="Weapon" type="TextureRect" parent="."]
margin_left = 291.0
margin_top = 592.0
margin_right = 891.0
margin_bottom = 1192.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="muzzle flash" type="TextureRect" parent="."]
margin_left = 345.0
margin_top = 593.0
margin_right = 985.0
margin_bottom = 1073.0
rect_scale = Vector2( 0.1, 0.08 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bullet" type="TextureRect" parent="."]
visible = false
margin_left = 963.0
margin_top = 604.0
margin_right = 1863.0
margin_bottom = 904.0
rect_scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NFT" type="TextureRect" parent="."]
margin_left = 1135.0
margin_top = 111.0
margin_right = 1947.0
margin_bottom = 890.0
rect_scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = 168.0
margin_right = 98.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Exit"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -42.5
margin_right = 76.0
margin_bottom = 42.5
custom_colors/font_color = Color( 0.964706, 0.270588, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedEnemy" type="AnimatedSprite" parent="."]
position = Vector2( 213, 594 )
frames = SubResource( 5 )
animation = "EnemyHoldingGun"
frame = 2
playing = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1446, 626 )
frames = SubResource( 2 )
animation = "Running"
frame = 1
playing = true

[node name="Cutscene" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = 322.0
margin_right = 193.0
margin_bottom = 424.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Cutscene"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -175.5
margin_top = -42.5
margin_right = 175.5
margin_bottom = 42.5
custom_colors/font_color = Color( 0.964706, 0.270588, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 1 )
text = "Cutscene"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -792.0
margin_top = -460.0
margin_right = -441.0
margin_bottom = -375.0
custom_colors/font_color = Color( 0.964706, 0.270588, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 7 )
text = "Created by:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Names" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -787.0
margin_top = -379.0
margin_right = -541.0
margin_bottom = -182.0
custom_colors/font_color = Color( 0.964706, 0.270588, 0.270588, 1 )
custom_colors/font_color_shadow = Color( 0.184314, 0.0196078, 0.0196078, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
custom_fonts/font = SubResource( 6 )
text = "Adam Koziak
Alexander Lako
Lily Czarnecki
Noah Wilson
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 68 )
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="startGame" to="." method="_on_startGame_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Cutscene" to="." method="_on_Cutscene_pressed"]
